# PojavLauncher_iOS

./:  .gitignore  .gitignore  .gitmodules  Info.plist.xml  LICENSE  Makefile  README.md  build.gradle  build_javaapp.sh  build_libegl.sh  build_natives.sh  build_package.sh  control  crowdin.yml  entitlements.codesign.xml  entitlements.sideload.xml  entitlements.trollstore.xml  entitlements.xml  entitlements_ipa.xml  newsfeed.html  robovm.properties  robovm.xml  settings.gradle
DEBIAN/: control  (+5 more)
Natives/: AboutLauncherViewController.h  AboutLauncherViewController.m  AccountListViewController.h  AccountListViewController.m  AppDelegate.h  AppDelegate.m  BKSSystemService.h  CMakeLists.txt  CustomControlsViewController+UndoManager.m  CustomControlsViewController.h  CustomControlsViewController.m  DownloadProgressViewController.h  DownloadProgressViewController.m  FileListViewController.h  FileListViewController.m  GameSurfaceView.h  GameSurfaceView.m  Info.plist  Info.plist.z  JavaGUIViewController.h  JavaGUIViewController.m  JavaLauncher.c  JavaLauncher.h  JavaLauncher.m  KeyboardInput.h  KeyboardInput.m  LauncherFAQViewController.h  LauncherFAQViewController.m  LauncherMenuViewController.h  LauncherMenuViewController.m  LauncherNavigationController.h  LauncherNavigationController.m  LauncherNewsViewController.h  LauncherNewsViewController.m  LauncherPrefContCfgViewController.h  LauncherPrefContCfgViewController.m  LauncherPrefGameDirViewController.h  LauncherPrefGameDirViewController.m  LauncherPrefManageJREViewController.h  LauncherPrefManageJREViewController.m  (+84 more)
Natives/Assets.xcassets/: Contents.json
Natives/Assets.xcassets/AppIcon-Dark.appiconset/: Contents.json
Natives/ar.lproj/: Localizable.strings
Natives/ar.lproj.lproj/: Localizable.strings
Natives/authenticator/: BaseAuthenticator.h  BaseAuthenticator.m  LocalAuthenticator.m  MicrosoftAuthenticator.m  MinecraftAccountJNI.m
Natives/awt_xawt/: xawt_fake.m
Natives/az.lproj/: Localizable.strings
Natives/ba.lproj/: Localizable.strings
Natives/bn.lproj/: Localizable.strings
Natives/ca.lproj/: Localizable.strings
Natives/ca.lproj.lproj/: Localizable.strings
Natives/cs.lproj/: Localizable.strings
Natives/cs.lproj.lproj/: Localizable.strings
Natives/ctxbridges/: bridge_tbl.h  gl_bridge.h  gl_bridge.m  osm_bridge.h  osm_bridge.m
Natives/customcontrols/: ControlButton.h  ControlButton.m  ControlDrawer.h  ControlDrawer.m  ControlJoystick.h  ControlJoystick.m  ControlLayout.h  ControlLayout.m  ControlSubButton.h  ControlSubButton.m  CustomControlsUtils.h  CustomControlsUtils.m  NSPredicateUtilitiesExternal.h  NSPredicateUtilitiesExternal.m
Natives/da.lproj/: Localizable.strings
Natives/de.lproj/: Localizable.strings
Natives/de.lproj.lproj/: Localizable.strings
Natives/el.lproj/: Localizable.strings
Natives/en-GB.lproj/: Localizable.strings
Natives/en-PT.lproj/: Localizable.strings
Natives/en-UD.lproj/: Localizable.strings
Natives/en-UD.lproj.lproj/: Localizable.strings
Natives/en.lproj/: InfoPlist.strings  LaunchScreen.storyboard  Localizable.strings  Main.storyboard  MinecraftSurface.storyboard  Surface.storyboard
Natives/es.lproj/: Localizable.strings
Natives/es.lproj.lproj/: Localizable.strings
Natives/et.lproj/: Localizable.strings
Natives/fa.lproj/: Localizable.strings
Natives/fi.lproj/: Localizable.strings
Natives/fi.lproj.lproj/: Localizable.strings
Natives/fil.lproj/: Localizable.strings
Natives/fr.lproj/: Localizable.strings
Natives/he.lproj/: Localizable.strings
Natives/hi.lproj/: Localizable.strings
Natives/hi.lproj.lproj/: Localizable.strings
Natives/id.lproj/: Localizable.strings
Natives/id.lproj.lproj/: Localizable.strings
Natives/input/: ControllerInput.h  ControllerInput.m  GyroInput.h  GyroInput.m  KeyboardInput.h  KeyboardInput.m
Natives/installer/: FabricInstallViewController.h  FabricInstallViewController.m  FabricUtils.h  FabricUtils.m  ForgeInstallViewController.h  ForgeInstallViewController.m  ModpackInstallViewController.h  ModpackInstallViewController.m
Natives/it.lproj/: Localizable.strings
Natives/it.lproj.lproj/: Localizable.strings
Natives/ja.lproj/: Localizable.strings
Natives/kk.lproj/: Localizable.strings
Natives/kk.lproj.lproj/: Localizable.strings
Natives/ko.lproj/: Localizable.strings
Natives/ko.lproj.lproj/: Localizable.strings
Natives/la.lproj/: Localizable.strings
Natives/lol.lproj/: Localizable.strings
Natives/lt.lproj/: Localizable.strings
Natives/ms.lproj/: Localizable.strings
Natives/ms.lproj.lproj/: Localizable.strings
Natives/nl.lproj/: Localizable.strings
Natives/nl.lproj.lproj/: Localizable.strings
Natives/no.lproj/: Localizable.strings
Natives/no.lproj.lproj/: Localizable.strings
Natives/pl.lproj/: Localizable.strings
Natives/pl.lproj.lproj/: Localizable.strings
Natives/pr.lproj/: Localizable.strings
Natives/pt-BR.lproj/: Localizable.strings
Natives/pt-BR.lproj.lproj/: Localizable.strings
Natives/pt.lproj/: Localizable.strings
Natives/resources/: Assets.car  glfw_keycodes.plist  log4j-rce-patch-1.12.xml  log4j-rce-patch-1.7.xml
Natives/ro.lproj/: Localizable.strings
Natives/ro.lproj.lproj/: Localizable.strings
Natives/ru.lproj/: Localizable.strings
Natives/ru.lproj.lproj/: Localizable.strings
Natives/scripts/: Makefile
Natives/sk.lproj/: Localizable.strings
Natives/sk.lproj.lproj/: Localizable.strings
Natives/sr.lproj/: Localizable.strings
Natives/sr.lproj.lproj/: Localizable.strings
Natives/sv.lproj/: Localizable.strings
Natives/th.lproj/: Localizable.strings
Natives/th.lproj.lproj/: Localizable.strings
Natives/tr.lproj/: Localizable.strings
Natives/tr.lproj.lproj/: Localizable.strings
Natives/tt.lproj/: Localizable.strings
Natives/tt.lproj.lproj/: Localizable.strings
Natives/uk.lproj/: Localizable.strings
Natives/uk.lproj.lproj/: Localizable.strings
Natives/vi.lproj/: Localizable.strings
Natives/zh-Hans.lproj/: Localizable.strings
Natives/zh-Hans.lproj.lproj/: Localizable.strings
Natives/zh-Hant.lproj/: Localizable.strings
(+326 files in other folders)
